customize the header logos , fixing the header logo stroke-width, fixing the hover state of header, fixing the user-details in side-menu at dark mode

--- a/src/components/side-menu/side-menu.styles.scss
+++ b/src/components/side-menu/side-menu.styles.scss
@@ -96,7 +96,11 @@
                 font-size: 15px;
                 .dashboard-icon{
                     margin-left: 10px;
-                    color: inherit !important;
+                    width: 1.1rem;
+                    height: 1.1rem;
+                    stroke: orange;
+                    fill:red;
+                    color:blue;
                 }
                 }
             }
@@ -106,7 +110,9 @@
                 border-radius: 5px;
                 border-right: 5px solid $color-light-text;
                 .dashboard-icon{
-                    color: $color-light-orange;
+                    .a{
+                        fill: $color-light-orange;
+                    }
                     
                 } 
             }
